--- a/nginx.conf
+++ b/nginx.conf
@@ -1,26 +1,34 @@
 worker_processes  1;
-error_log /dev/stderr warn;
+error_log stderr;
 
 events {
     worker_connections 1024;
 }
-
-# make sure to set plaintext JWT_SECRET environment variable
-env JWT_SECRET;
+# cloudfoundry
+env VCAP_SERVICES;
 
 http {
-
-    log_format main '$remote_addr - $remote_user [$time_local] "$request" '
+    charset utf-8;
+    # cloudfoundry
+  log_format cloudfoundry 'NginxLog $remote_addr - $remote_user [$time_local] "$request" '
                       '$status $body_bytes_sent "$http_referer" '
                       '"$http_user_agent" "$http_x_forwarded_for"';
 
-    access_log /dev/stdout main;
+    access_log /dev/stdout cloudfoundry;
 
     lua_package_path "/usr/local/openresty/lualib/?.lua;;";
+      default_type application/octet-stream;
+      include mime.types;
+      sendfile on;
 
+      tcp_nopush on;
+      keepalive_timeout 30;
+      port_in_redirect off;
     server {
-        listen 8080;
-
+        listen {{port}};
+        ssi on;
+        rewrite_log on;
+        
         location / {
             default_type text/html;
             content_by_lua '
